@@ -1,3 +1,4 @@
+- updated configure.in to configure.ac (2020/06/05 MS)
 - added shadow surface for wide screens (2020/06/05 MS)
 - removed all inline keywords to work with GCC 5 (2015/05/16 MS)
 
